# quail

./: .gitignore  CODE_OF_ETHICS.md  Cargo.toml  EPIGRAMS.md  LICENSE  README.md  grammar.txt
.circleci/: config.yml
assets/: quail.txt  types.txt
assets/help/: hole.txt
examples/: bool.ql  collatz.ql  const.ql  debruijn.ql  factorial.ql  fibonacci.ql  hello.ql  identity.ql  list.ql  lists.ql  many_bindings.ql  match_statements.ql  multiargs.ql  nat.ql  pair.ql  primes.ql  trivial.ql
quail.vim/ftdetect/: quail.vim
quail.vim/syntax/: quail.vim
src/: ast.rs  builtins.rs  context.rs  eval.rs  hole.rs  interpreter.rs  lib.rs  main.rs  parser.rs  runtime.rs  tests.rs  tokenizer.rs  typecheck.rs  typecontext.rs  types.rs
src/ast/: ast.rs  mod.rs  tests.rs
src/resolver/: mod.rs  resolver.rs
src/runtime/: builtins.rs  context.rs  import.rs  mod.rs  prims.rs  runtime.rs  value.rs
src/stg/: ast.rs  heap.rs  machine.rs  mod.rs  tests.rs  transform.rs
src/types/: check.rs  context.rs  mod.rs  types.rs
stg_examples/: nat.ql  transform.ql
